--- a/lib/config.json.sample
+++ b/lib/config.json.sample
@@ -5,17 +5,19 @@
   "eventLogPrefix": "/home/user1/repo/UniversalIR",
   "mqtt": [ { "serverUrl": "mqtt:10.1.1.186:1883",
               "requestTopic": "house/livtv",
-              "commands": { "mediaplayer": [ { "topic": "house/ir", "command": "rca-tv1/power", "delay": 500, "state": {"dev": "tv", "state": "power" }},
-                                             { "topic": "house/ir", "command": "x2/power", "delay": 500, "state": {"dev": "x2", "state": "power" }},
+              "commands": { "mediaplayer": [ { "topic": "house/ir", "command": "rca-tv1/power", "delay": 1000, "state": {"dev": "tv", "state": "power" }},
+                                             { "topic": "house/ir", "command": "x2/power", "delay": 1000, "state": {"dev": "x2", "state": "power" }},
+                                             { "topic": "house/ir", "command": "neoteck-hdmi-sw-5/hdmi1", "delay": 500 },
                                              { "topic": "house/ir", "command": "neoteck-hdmi-sw-5/hdmi1" } ],
-                            "tv": [ { "topic": "house/ir", "command": "rca-tv1/power", "delay": 500, "state": {"dev": "tv", "state": "power" }},
-                                    { "topic": "house/ir", "command": "8642HD/power", "delay": 500, "state": {"dev": "cable", "state": "power" }},
-                                    { "topic": "house/ir", "command": "neoteck-hdmi-sw-5/hdmi2" } ],
-                            "off": [ ]
+                            "tv": [ { "topic": "house/ir", "command": "rca-tv1/power", "delay": 1000, "state": {"dev": "tv", "state": "power" }},
+                                    { "topic": "house/ir", "command": "8642HD/power", "delay": 1000, "state": {"dev": "cable", "state": "power" }},
+                                    { "topic": "house/ir", "command": "neoteck-hdmi-sw-5/hdmi2" },
+                                    { "topic": "house/ir", "command": "neoteck-hdmi-sw-5/hdmi2", "delay": 500 } ],
+                            "off": [ { "topic": "house/ir", "command": "neoteck-hdmi-sw-5/hdmi2", "delay": 500 } ]
                           },
-              "state": { "x2": { "power-off": { "topic": "house/ir", "command": "x2/power", "delay": 500 }},
-                         "cable": { "power-off": { "topic": "house/ir", "command": "8642HD/power", "delay": 500 }},
-                         "tv": { "power-off": { "topic": "house/ir", "command": "rca-tv1/power", "delay": 500 }}
+              "state": { "x2": { "power-off": { "topic": "house/ir", "command": "x2/power-off", "delay": 1000 }},
+                         "cable": { "power-off": { "topic": "house/ir", "command": "8642HD/power", "delay": 1000 }},
+                         "tv": { "power-off": { "topic": "house/ir", "command": "rca-tv1/power", "delay": 1000 }}
                        }
             }
           ]
